# hercules

./: .buildinfo  .gitignore  CITATION.cff  README.md  bash_demo.sh  battery.html  environment.yml  examples.html  examples_overview.html  genindex.html  install_instructions.html  install_local.html  install_old.html  install_on_kestrel.html  install_spack.html  installation.html  intro.html  max-power-prediction-OK-pysam.ipynb  objects.inv  order_of_op.html  pyproject.toml  requirements.txt  search.html  searchindex.js  seas_demo.py  setup.py  solar_pv.html
.github/workflows/: check-working-examples.yaml  continuous-integration-workflow.yaml  deploy-pages.yaml
_sources/: install_old.md  install_on_kestrel.md  install_spack.md  intro.md
_sources/examples/: 08_floris_only.md
docs/: _config.yaml  _config.yml  _toc.yml  battery.md  examples.md  examples_overview.md  install_instructions.md  install_local.md  install_old.md  install_on_kestrel.md  install_spack.md  intro.md  order_of_op.md  solar_pv.md
emu_python/: app.py  controller.py  demo_netcdf.py  dummy_amr_wind.py  emu_comms.py  emu_helics.py  emulator.py  front_end.db  inspect_data.ipynb  openoa.py  py_sims.py  zmqserver.py
emu_python/controllers/: simple_yaw_controller.py
emu_python/local_amr_wind_demo/: old_input.i  old_input.i_v2
emu_python/python_simulators/: simple_solar.py  simple_solar_model.py  simple_yaw.py  yaw_simulator.py
example_case_folders/: amr-wind_buildme.sh  find_and_kill_helics
example_case_folders/01_amr_wind_only/: README.md  batch_script.sh  hercules_input_000.yaml  hercules_runscript.py  readme.md  sbatch_script.sh
example_case_folders/02_amr_wind_and_solar/: README.md  hercules_input_000.yaml
example_case_folders/02_amr_wind_dummy_only/: amr_input.inp  bash_script.sh  hercules_input_000.yaml  readme.txt  (+1 more)
examples/: 05_floris_standin_and_electrolyzer.html  05_floris_wind_standin_and_electrolyzer.html  06_amr_wind_standin_and_battery.html  07_amr_wind_standin_and_solar_pysam.html  07_floris_standin_and_solar_pysam.html  08_floris_only.html  08_floris_standin_only.html  09_amr_wind_openfast.html  09_heterogeneous_wind.html  14_energy_storage_control_and_wind.html
hercules/: __init__.py  amr_wind_standin.py  controller.py  controller_standin.py  controller_standin_no_helics.py  dummy_amr_wind.py  emulator.py  emulator_no_helics.py  floris_standin.py  long_run_wind.py  py_sims.py  seas_federate_agent.py  utilities.py
initial_work_folders/: control_center.py  db.py  emu_comms.py  front_end_dash.py  inspect_data.ipynb  learn_to_read_amrwind_input.ipynb  nwtc.py  readme.txt  reproduce_kakfastream.py  sequence.py  testclient.py  vis_client.py
scripts/: activate_conda.sh  find_and_kill_helics.sh  get_helics_port.sh
tests/: emulator_test.py  floris_standin_test.py  py_sims_test.py  seas_test.py
(+294 files in other folders)
