[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hercules"
version = "1.1"
description = "Python front-end to the emulator."
readme = "README.md"
requires-python = ">=3.9"
authors = [
     { name = "Genevieve Starke", email = "Genevieve.Starke@nrel.gov" },
    { name = "Michael (Misha) Sinner", email = "Michael.Sinner@nrel.gov" },
    { name = "Paul Fleming", email = "paul.fleming@nrel.gov" },
]
license = { file = "LICENSE.txt" }
urls = { "Homepage" = "https://github.com/NREL/hercules" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

dependencies = [
"numpy~=1.20",
"matplotlib~=3.8",
"pandas~=2.0",
"floris~=4.0",
"nrel-pysam~=4.2",
"netCDF4",
]

[project.optional-dependencies]
docs = [
    "jupyter-book",
    "sphinx-book-theme"
]
develop = [
    "pytest",
    "pre-commit",
    "ruff",
    "isort"
]

[tool.setuptools.packages.find]
include = ["hercules*"]

[coverage.run]
# Coverage.py configuration file
# https://coverage.readthedocs.io/en/latest/config.html
branch = true
source = "hercules/*"
omit = [
    "setup.py",
    "tests/*"
]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning:pandas.*:"
]

[tool.ruff]
src = ["hercules", "tests"]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]
lint.ignore-init-module-imports = true

# See https://github.com/charliermarsh/ruff#supported-rules
# for rules included and matching to prefix.
lint.select = ["E", "F", "I"]

# F401 unused-import: Ignore until all used isort flags are adopted in ruff
# ignore = ["F401"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = ["A", "B", "C", "D", "E", "F"]
lint.fixable = ["E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["flasc"]
order-by-type = false

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["F401"]
"hercules/seas_federate_agent.py" = ["I", "E"]
